Fixed popup image bug on iphone

--- a/resources/scss/popup.scss
+++ b/resources/scss/popup.scss
@@ -364,7 +364,7 @@
 }
 
 .popup__img-body{
- position: absolute;
+ position: relative;
  inset: 0px;
  flex: 1 0 620px;
  width: 620px;
